--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent" >
     
     <SurfaceView 
-        android:id="@+id/surfaceview"
+        android:id="@+id/mSurfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
